# warp-example-app

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2020-01-19-094011_init_schema/: up.sql
misc/db/: build.sh  data.sql  run.sh
src/: main.rs  schema.rs
templates/: hello.html  index.html  tasks.html
