[package]
name = "warp-example-app"
version = "0.0.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
diesel = { version = "1.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15"
tera = "1.0"
tokio = { version = "0.2", features = ["macros"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
warp = "0.2"
